--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@
   }
 
   h1 {
-    @apply font-semibold text-4xl;
+    @apply font-semibold text-6xl;
   }
 
   h2,
@@ -29,7 +29,15 @@
     @apply text-xl;
   }
 
+  p {
+    @apply text-2xl font-light;
+  }
+
   li {
     @apply cursor-pointer font-medium text-xl text-[#212529];
+  }
+
+  span {
+    @apply text-[#6FC2FF];
   }
 }
