--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-    @apply bg-[#1D1D1D] text-[#F8F9FA] font-poppins tracking-wide;
+    @apply bg-black text-white font-poppins tracking-wide;
   }
 
   h1 {
@@ -38,6 +38,6 @@
   }
 
   span {
-    @apply text-[#6FC2FF];
+    @apply text-blue;
   }
 }
